c4prj2_input/grade.txt
Grading at Wed Jan 27 15:41:00 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:16:70: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                                                                      ^
input.c:41:1: error: expected ‘{’ at end of input
 }
 ^
input.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
